<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_100"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/selected_phrase_text"
        android:layout_width="322dp"
        android:layout_height="263dp"
        android:layout_marginTop="48dp"
        android:text="@string/phrase"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginEnd="32sp"
        android:text="@string/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previous_button" />

    <Button
        android:id="@+id/previous_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32sp"
        android:text="@string/previous_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_phrase_text" />

    <Button
        android:id="@+id/random_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginEnd="32sp"
        android:text="@string/random_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_button" />

    <Button
        android:id="@+id/credits_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginEnd="32sp"
        android:text="@string/credits_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_button" />

</androidx.constraintlayout.widget.ConstraintLayout>